# Computer_Graphics_course

./: .gitignore  Exam_questions.md  README.md
lab1/: CMakeLists.txt  README.md  draw_line  lab_1.c  line_of_Brasenhem
lab2/: CMakeLists.txt  README.md  lab_2.c
lab3/: CMakeLists.txt  README.md  lab_3.c
lab4/: CMakeLists.txt  README.md  lab_4.c
lab5/: CMakeLists.txt  README.md  lab_5.c
